--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
       institution: {
         filterMethod: 'dropdown',
       }
-    }  
     })
     .filters({
       show: ['source', 'author', 'citation', 'period', 'location', 'institution']
     })
     .table({
-      show: ['source', 'author', 'citation', 'period', 'location', 'institution']
+      show: ['source', 'citation', 'period', 'location', 'institution']
     })
     .render();
 </script>
