--- a/index.html
+++ b/index.html
@@ -16,37 +16,15 @@
     var viz = d3.maptable('#vizContainer')
     .json('table.json')
     .columns({
-      position: {
+      source: {
         filterMethod: 'dropdown',
-      },
-      office: {
-        filterMethod: 'dropdown',
-      },
-      start_date: {
-        filterMethod: 'compare',
-        filterInputType: 'date',
-        dataParse: function(val) {
-          return new Date(val).getTime();
-        }
-      },
-      salary: {
-        filterMethod: 'compare',
-        filterInputType: 'number',
-        dataParse: function(val) {
-          return parseInt(val.replace(/[^0-9]+/g, ''), 10);
-        }
-      },
-      links: {
-        virtual: function(d) {
-          return '<a href="#' + d.extn+ '">Link</a>';
-        }
       }
     })
     .filters({
-      show: ['name', 'position', 'office', 'salary', 'start_date']
+      show: ['source', 'author', 'period', 'location', 'institution']
     })
     .table({
-      show: ['name', 'position', 'office', 'salary', 'start_date', 'links']
+      show: ['source', 'author', 'citation', 'period', 'location', 'institution']
     })
     .render();
 </script>
