--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <script src="d3.min.js" charset="utf-8"></script>
 <script src="topojson.min.js"></script>
-<script src="maptable.js"></script>
+<script src="maptable.min.js"></script>
 <div id="vizContainer" class='container'></div>
 
 <script>
