--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     var viz = d3.maptable('#vizContainer')
             .csv('basic.csv')
-            .map({ path: 'ne_110m_admin_0_countries.json' })
+            .map({ path: 'world-palestine-highres.geo.json' })
             .filters()
             .table()
             .render();
