--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="maptable.css">
     <title>Awqaf Online Bibliography</title>
+    <h2>Awqaf Online Bibliography</h2>
 </head>
 <body>
 
@@ -17,10 +18,21 @@
     var viz = d3.maptable('#vizContainer')
             .csv('basic.csv')
             .map({ path: 'ne_110m_admin_0_countries.json' })
-            .filters()
-            .table()
+            .filters({
+                show: ['source','author','period','location','institution']
+            })
+            .table({
+                show: ['source','citation','period','location','institution']
+            })
             .render();
 
 </script>
 </body>
+
+<footer>
+
+    <p>This database is built by.</p>
+
+</footer>    
+
 </html>
