--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     var viz = d3.maptable('#vizContainer')
             .csv('basic.csv')
             .map({ path: 'ne_110m_admin_0_countries.json' })
+            .columns({
+                source: {
+                filterMethod: 'dropdown',
+            },
+            period: {
+                filterMethod: 'dropdown',
+            }
+            })
             .filters({
                 show: ['source','author','period','location','institution']
             })
