--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     var viz = d3.maptable('#vizContainer')
             .csv('basic.csv')
-            .map({ path: 'world-palestine-highres.json' })
+            .map({ path: 'ne_110m_admin_0_countries.json' })
             .columns({
                 source: {
                 filterMethod: 'dropdown',
