--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="maptable.css">
-    <title>Awqaf Online Bibliography</title>
-    <h2>Awqaf Online Bibliography</h2>
+    <title>Awqāf Online Bibliography</title>
+    <h2><center>Awqāf Online Bibliography</center></h2>
 </head>
 <body>
 
