--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="maptable.css">
-    <title>Awqāf Online Bibliography</title>
-    <h2><center>Awqāf Online Bibliography</center></h2>
+    <title>Awqāf Bibliography Online</title>
+    <h2><center>Awqāf Bibliography Online</center></h2>
+    <p><center>The Awqāf Bibliography Online is a project to document the growing
+    scholarly literature on waqf studies. Originally intended as online database for my research
+    on Mamlūk endowments, the database is open to all periods to help researchers locate material on endowments
+    in the Islamic world.</center></p>
+    <p><center>Submissions, comments and corrections are welcome.</center></p>
 </head>
 <body>
 
@@ -39,7 +44,7 @@
 
 <footer>
 
-    <p>This database is built by.</p>
+    <p><center>This database is built by.</center></p>
 
 </footer>    
 
